<resources>
    <string name="app_name">MiniMoneybox</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_full_name">Full Name (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="email_address_error">Please enter a correct email address</string>
    <string name="password_error">Please enter a correct password</string>
    <string name="full_name_error">Please enter your full name</string>
    <string name="input_valid">Input is valid!</string>

    <string name="session_expired_title">Session Expired</string>
    <string name="session_expired_message">You have been out for a long time. Log in again</string>
    <string name="session_expired_action_text">Back to Login</string>

    <!--    Lottie files-->
    <string name="lottie_owl_coin_shower">owl_coin_shower.json</string>
    <string name="lottie_loading">coin_loading.json</string>
    <string name="lottie_success">success.json</string>
    <string name="lottie_failure">failure.json</string>

    <string name="error_feature_title">Something went wrong!</string>

    <!-- Account Activity -->
    <string name="account_activity_greeting_no_name">Hello!</string>
    <string name="account_activity_greeting_header_with_name">Hello,</string>
    <string name="account_activity_greeting_body">%s!</string>
    <string name="total_plan_value">Total plan value: %s</string>
    <string name="loading_account_information_message">Wait a sec&#8230; \nFetching your account information</string>

    <string name="text_view_plan_value">PlanValue:</string>
    <string name="text_view_moneybox">Moneybox:</string>

    <string name="quick_add_title">Quick add</string>
    <string name="loading_quick_add_message">Wait a sec&#8230; \nAdding your money!</string>
    <string name="product_details_moneybox">Moneybox</string>

</resources>
